--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "out": "next export",
     "lint": "next lint"
   },
   "dependencies": {
@@ -20,7 +21,7 @@
     "clsx": "^2.1.0",
     "cmdk": "^0.2.0",
     "lucide-react": "^0.309.0",
-    "next": "14.0.4",
+    "next": "13.4.13",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.0",
@@ -32,7 +33,7 @@
     "@types/react-dom": "^18",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.0.4",
+    "eslint-config-next": "13.4.13",
     "postcss": "^8",
     "tailwindcss": "^3.3.0",
     "typescript": "^5"
